Editor reskin: scrollbar affects edit area size, fix (bugid:7247)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@38772 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/EditPageReskin/RTE/css/content.scss
+++ b/extensions/wikia/EditPageReskin/RTE/css/content.scss
@@ -14,6 +14,8 @@ head {
 #bodyContent {
 	background: $color-page;
 	color: $color-text;
+	padding-left: 6px;
+	overflow-y: scroll;
 }
 
 /**
